WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298209
[WebGPU] PSO repro generator fails to emit GPU family which is needed for some compilations
https://bugs.webkit.org/show_bug.cgi?id=298209
Summary
[WebGPU] PSO repro generator fails to emit GPU family which is needed for som...
Mike Wyrzykowski
Reported
2025-09-01 17:16:56 PDT
[WebGPU] PSO repro generator fails to emit GPU family which is needed for some compilations
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-01 17:20:21 PDT
<
rdar://problem/159628368
>
Mike Wyrzykowski
Comment 2
2025-09-01 17:22:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50160
EWS
Comment 3
2025-09-02 12:45:14 PDT
Committed
299449@main
(c7fd40146244): <
https://commits.webkit.org/299449@main
> Reviewed commits have been landed. Closing PR #50160 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug