[WebGPU] PSO repro generator fails to emit GPU family which is needed for some compilations https://bugs.webkit.org/show_bug.cgi?id=298209 radar://159628368

Reviewed by Dan Glastonbury.

Shaders which use the GPU family will fail to compile if we don't emit
it in the MTLCompileOptions.

* Source/WebGPU/WebGPU/Pipeline.mm:
(WebGPU::dumpMetalReproCaseComputePSO):
(WebGPU::dumpMetalReproCaseRenderPSO):

Canonical link: https://commits.webkit.org/299449@main